Changed Sale and Product relation to OneToMany